# AI-Agent-Platform

./: .Dockerfile  .dockerignore  =1.0.0  Dockerfile  LICENSE  README.md  ai_agent_platform.db  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 0389edcba3ff_removal_of_update_while_create.py  0e2df622eca6_initial_tables.py  1e7aea5b5343_include_session_and_message.py  39d4d8a959ab_include_drop_column_for_url.py  4131ddccb55b_removal_of_update_while_create.py  70ae28f1dcfd_accepting_arabic_content_in_messages_.py  7d92e89b6add_include_voice_job_model.py  aa05d09625d6_removal_of_job_table.py  b892ea42af07_include_llm_open_api_platform.py  ba8df38ae9ed_remove_init_and_use_created_at.py  c2db2da7309b_initial_tables.py  d841b4c364e3_include_agent_model.py
exceptions/: openai.py  sqlalchemy.py
src/: ai_agent_platform.db  celery.py  main.py
src/agent/: __init__.py  api.py  dependancies.py  dependency.py  models.py  repository.py  schemas.py  service.py
src/alembic/: env.py
src/alembic/versions/: 58ca0838201d_add_agent_table.py
src/common/: __init__.py  orm_base.py  repository_bas.py  repository_base.py  schemas.py  utils.py
src/core/: __init__.py  configs.py  database.py  logger.py
src/exceptions/: __init__.py  handler.py  http.py  openai.py  sqlalchemy.py
src/llm_interaction/: client_repository.py  openai_client.py
src/message/: __init__.py  api.py  dependency.py  models.py  repository.py  schemas.py  service.py  types.py  utils.py
src/session/: __init__.py  api.py  dependancy.py  models.py  repository.py  schemas.py  service.py
(+5 files in other folders)
